fixed bug with homework headline is not centered

--- a/project-angular/src/app/homework/homework.component.css
+++ b/project-angular/src/app/homework/homework.component.css
@@ -1,3 +1,7 @@
 #outer {
     margin-top: 15px;
 }
+#add-homework {
+    position: fixed;
+    right: 5px;
+}
